src/app/fantasyTeams/page/scores-page.component.scss
#scores-card {
  width: 400px;

  md-divider {
    margin-bottom: 20px;
  }

  p {
    margin-left: 20px;
  }

  .key {
    margin-top: 20px;
    margin-bottom: 8px;
  }

  .instructions {
    margin-top: 4px;
  }
}

.all-teams {
  float: right;
  font-size: 18px;
  position: relative;
  top: -8px;
  padding-left: 12px;
  padding-right: 12px;
}

.team-link {
  position: relative;
  top: -14px;
  font-size: 18px;
  padding-top: 4px;
}

.md-headline {
  font-weight: 600;
}

.scores-table {
  padding-top: 10px;
  padding-bottom: 10px;
  min-height: 272px;
}

.score-row {
  position: relative;
}

.loading {
  margin-top: 20px;
}

.seed {
  box-sizing: border-box;
  display: inline-block;
  width: 10px;
  text-align: right;
  margin-right: 2px;
  font-size: 16px;
  position: relative;
  top: -2px;
}

@media screen and (min-width: 401px) {
  .seed {
    width: 12px;
    margin-right: 4px;
  }
}

@media screen and (min-width: 430px) {
  .seed {
    width: 20px;
    margin-right: 8px;
  }
}

@media screen and (min-width: 460px) {
  .seed {
    width: 28px;
    margin-right: 12px;
  }
}

.name {
  display: inline-block;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  height: 30px;

  a {
    margin-left: 0;
    margin-right: 0;
  }

  &.cant-win {
    a {
      text-decoration: line-through;
    }
  }
}

.points {
  box-sizing: border-box;
  text-align: right;
  position: absolute;
  right: 0;
  background: white;
  padding-left: 12px;

  &.eliminated {
    color: rgb(223, 19, 50);
  }
}

teams-left {
  position: relative;
  top: -12px;
  left: -8px;
  z-index: 9;
}

